# bouncer

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.pt-BR.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.pt-BR.md  CONTRIBUTING.md  CONTRIBUTING.pt-BR.md  Dockerfile  LICENSE  Makefile  README.md  README.pt-BR.md  SECURITY.md  SECURITY.pt-BR.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  PULL_REQUEST_TEMPLATE.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: lint.yml
docs/: architecture-decisions-analysis.tmp.pt-BR.md  architecture-decisions.tmp.pt-BR.md  architecture.md  architecture.pt-BR.md  prd.md  prd.pt-BR.md
src/bouncer/: __init__.py  __main__.py
tests/: test_cli.py
