# PT-BR: Configurações do projeto Python / EN: Python project settings
[project]
name = "bouncer"
version = "0.1.0"
description = "Local-first code search context filter."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Bouncer contributors" }
]
keywords = ["code-search", "local-first", "mcp", "pgvector", "python"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
dev = [
  "ruff==0.3.0",
]

[project.urls]
Homepage = "https://github.com/freelogicbr/bouncer"
Repository = "https://github.com/freelogicbr/bouncer"
Issues = "https://github.com/freelogicbr/bouncer/issues"

[project.scripts]
bouncer = "bouncer.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
ignore = []
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
